兼容高版本JDK